# symbols-mcp

./: .gitignore  .mcp.json  .mcpbignore  README.md  SETUP.md  generate-mcpb.sh  manifest.json  package-lock.json  package.json  publish.sh  pyproject.toml  server.json  symbols-mcp.mcpb
lib/: audit.js
review-server/: README.md  package.json  server.js
review-server/public/: app.js  index.html  styles.css
symbols_mcp/: __init__.py  server.py
symbols_mcp/skills/: AGENT_INSTRUCTIONS.md  AUDIT.md  BRAND_IDENTITY.md  CLI.md  COMMON_MISTAKES.md  COMPONENTS.md  COOKBOOK.md  DEFAULT_COMPONENTS.md  DEFAULT_DESIGN_SYSTEM.md  DEFAULT_LIBRARY.md  DEFAULT_PROJECT.md  DEFAULT_STYLES.md  DESIGN.md  DESIGN_CRITIQUE.md  DESIGN_DIRECTION.md  DESIGN_PERSONAS.md  DESIGN_SYSTEM.md  DESIGN_SYSTEM_ARCHITECT.md  DESIGN_TO_CODE.md  DESIGN_TREND.md  FIGMA_MATCHING.md  FRAMEWORK.md  FRANKABILITY.md  FRANK_FIX_WORKFLOW.md  LEARNINGS.md  MARKETING_ASSETS.md  MIGRATE_TO_SYMBOLS.md  MIGRATION.md  MODERN_STACK.md  PATTERNS.md  PRESENTATION.md  PROJECT_STRUCTURE.md  RULES.md  RUNNING_APPS.md  SDK.md  SEO-METADATA.md  SHARED_LIBRARIES.md  SNIPPETS.md  SSR-BRENDER.md  SYNTAX.md  (+1 more)
templates/agent-rules/: .clinerules  .windsurfrules  AGENTS.md  CLAUDE.md
templates/agent-rules/.claude/: README.md  settings.json
templates/agent-rules/.claude/hooks/: README.md  symbols-mcp-audit.sh  symbols-mcp-reminder.sh  symbols-mcp-require.sh
templates/agent-rules/.cursor/rules/: symbols.md
