[project]
name = "symbols-mcp"
version = "1.0.25"
description = "Symbols.app MCP — docs, code generation, publishing, CLI/SDK reference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
]

[project.scripts]
symbols-mcp = "symbols_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["symbols_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
